# longest-word

./: .gcloudignore  app.yaml  main.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: .app-engine-cd.yml  .python-ci.yml
longest_word/: game.py
static/: style.css
templates/: check.html  home.html
tests/: test_game.py
